fix: Изменена версия JDK.